--- a/src/app/shakemap/station-list/station-list.component.html
+++ b/src/app/shakemap/station-list/station-list.component.html
@@ -1,6 +1,6 @@
 <mat-menu #sortMenu="matMenu">
   <button mat-menu-item
-      *ngFor="let option of sortOptions"
+      *ngFor="let option of sortOptions;trackBy: trackByIndex"
       (click)="sortBy=option">
     {{ option.display }}
   </button>
