--- a/src/app/shared/product-attribution/product-attribution.component.html
+++ b/src/app/shared/product-attribution/product-attribution.component.html
@@ -1,3 +1,3 @@
-<span *ngFor="let source of getSources(product)">
+<span *ngFor="let source of getSources(product);trackBy: trackByIndex">
   <shared-attribution [sourceCode]="source"></shared-attribution>
 </span>
