--- a/src/app/origin/detail/detail.component.scss
+++ b/src/app/origin/detail/detail.component.scss
@@ -1,25 +1,7 @@
-table {
-  border-collapse: collapse;
-  margin-top: 1em;
-  max-width: 750px;
-  text-align: left;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #ddd;
-  padding: 0.666em 0.75em;
-}
-
-th {
-  background-color: #f4f4f4;
-  background-color: rgba(0, 0, 0, 0.04);
-  font-weight: bold;
+.description-table {
+  width: 630px;
 }
 
 .uncertainty {
-  color: #666;
-  display: block;
-  font-size: 0.8em;
-  font-weight: normal;
+  font-style: oblique;
 }
