fixed origin phase table with global horizontal scroll css, DONT FORGET TO CHANGE ENVIRONMENT FILE BACK

--- a/src/app/origin/phase/phase.component.html
+++ b/src/app/origin/phase/phase.component.html
@@ -3,60 +3,70 @@
 
     <h4>Phase Arrival Times</h4>
 
-    <button (click)="onDownload()" mat-raised-button>Download</button>
+    <button (click)="onDownload()"
+      mat-raised-button>Download</button>
 
-    <mat-table [dataSource]="sortedPhases" matSort (matSortChange)="sortPhases($event)">
-      <!-- render order is defined by columnsToDisplay -->
-      <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
-      <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
+    <div class="horizontal-scrolling">
+      <mat-table [dataSource]="sortedPhases"
+        matSort
+        (matSortChange)="sortPhases($event)">
+        <!-- render order is defined by columnsToDisplay -->
+        <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+        <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
 
-      <ng-container matColumnDef="azimuth">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="azimuth">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.azimuth }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.azimuth | sharedNumber:2:'°' }}
           </mat-cell>
-      </ng-container>
+        </ng-container>
 
-      <ng-container matColumnDef="channel">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ columnTitles.channel }}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let arrival">
-          {{ arrival.channel }}
-        </mat-cell>
-      </ng-container>
+        <ng-container matColumnDef="channel">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
+            {{ columnTitles.channel }}
+          </mat-header-cell>
+          <mat-cell *matCellDef="let arrival">
+            {{ arrival.channel }}
+          </mat-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="distance">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ columnTitles.distance }}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let arrival">
-          {{ arrival.distance | sharedNumber:2:'°' }}
-        </mat-cell>
-      </ng-container>
+        <ng-container matColumnDef="distance">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
+            {{ columnTitles.distance }}
+          </mat-header-cell>
+          <mat-cell *matCellDef="let arrival">
+            {{ arrival.distance | sharedNumber:2:'°' }}
+          </mat-cell>
+        </ng-container>
 
-      <ng-container matColumnDef="phase">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="phase">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.phase }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.phase }}
           </mat-cell>
-      </ng-container>
+        </ng-container>
 
-      <ng-container matColumnDef="status">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="status">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.status }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.status }}
           </mat-cell>
-      </ng-container>
+        </ng-container>
 
-      <ng-container matColumnDef="time">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="time">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.time }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
@@ -64,26 +74,29 @@
               {{ arrival.timeRelative | sharedNumber:1:'s' }}
             </abbr>
           </mat-cell>
-      </ng-container>
+        </ng-container>
 
-      <ng-container matColumnDef="timeResidual">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="timeResidual">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.timeResidual }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.timeResidual | sharedNumber:2 }}
           </mat-cell>
-      </ng-container>
+        </ng-container>
 
-      <ng-container matColumnDef="timeWeight">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <ng-container matColumnDef="timeWeight">
+          <mat-header-cell *matHeaderCellDef
+            mat-sort-header>
             {{ columnTitles.timeWeight }}
           </mat-header-cell>
           <mat-cell *matCellDef="let arrival">
             {{ arrival.timeWeight | sharedNumber:2 }}
           </mat-cell>
-      </ng-container>
-    </mat-table>
+        </ng-container>
+      </mat-table>
+    </div>
 
   </ng-container>
 </ng-container>
