--- a/src/app/shared/station/station.component.html
+++ b/src/app/shared/station/station.component.html
@@ -57,8 +57,7 @@
           <mat-header-cell *matHeaderCellDef>
             Name
           </mat-header-cell>
-          <mat-cell
-            [attr.role]="'rowheader'"
+          <mat-cell [attr.role]="'rowheader'"
             [class.mat-cell]="false"
             class="mat-header-cell"
             *matCellDef="let channel">
@@ -71,10 +70,10 @@
             PGA
           </mat-header-cell>
           <mat-cell *matCellDef="let channel">
-            {{ channel.pga?.value |
-                sharedNumber:2:channel?.pga?.units }}
+            {{ channel.pga?.value | sharedNumber:2:channel?.pga?.units }}
 
-            <shared-station-flag class="flag" [flag]="channel?.pga?.flag">
+            <shared-station-flag class="flag"
+              [flag]="channel?.pga?.flag">
             </shared-station-flag>
           </mat-cell>
         </ng-container>
@@ -84,10 +83,10 @@
             PGV
           </mat-header-cell>
           <mat-cell *matCellDef="let channel">
-            {{ channel.pgv.value |
-                sharedNumber:2:channel?.pgv?.units }}
+            {{ channel.pgv.value | sharedNumber:2:channel?.pgv?.units }}
 
-            <shared-station-flag class="flag" [flag]="channel?.pgv?.flag">
+            <shared-station-flag class="flag"
+              [flag]="channel?.pgv?.flag">
             </shared-station-flag>
           </mat-cell>
         </ng-container>
@@ -97,10 +96,10 @@
             PSA(03)
           </mat-header-cell>
           <mat-cell *matCellDef="let channel">
-            {{ channel.psa03.value |
-                sharedNumber:2:channel?.psa03?.units }}
+            {{ channel.psa03.value | sharedNumber:2:channel?.psa03?.units }}
 
-            <shared-station-flag class="flag" [flag]="channel?.psa03?.flag">
+            <shared-station-flag class="flag"
+              [flag]="channel?.psa03?.flag">
             </shared-station-flag>
           </mat-cell>
         </ng-container>
@@ -110,10 +109,10 @@
             PSA(10)
           </mat-header-cell>
           <mat-cell *matCellDef="let channel">
-            {{ channel.psa10.value |
-                sharedNumber:2:channel?.psa10?.units}}
+            {{ channel.psa10.value | sharedNumber:2:channel?.psa10?.units}}
 
-            <shared-station-flag class="flag" [flag]="channel?.psa10?.flag">
+            <shared-station-flag class="flag"
+              [flag]="channel?.psa10?.flag">
             </shared-station-flag>
           </mat-cell>
         </ng-container>
@@ -123,10 +122,10 @@
             PSA(30)
           </mat-header-cell>
           <mat-cell *matCellDef="let channel">
-            {{ channel.psa30.value |
-                sharedNumber:2:channel?.psa30?.units }}
+            {{ channel.psa30.value | sharedNumber:2:channel?.psa30?.units }}
 
-            <shared-station-flag class="flag" [flag]="channel?.psa30?.flag">
+            <shared-station-flag class="flag"
+              [flag]="channel?.psa30?.flag">
             </shared-station-flag>
           </mat-cell>
         </ng-container>
