need feedback on horizontal-scrolling on the shakemap/stations details mat-dropdowns

--- a/src/app/shakemap/station-list/station-list.component.html
+++ b/src/app/shakemap/station-list/station-list.component.html
@@ -20,9 +20,8 @@
 
 <ng-container *ngFor="let station of stations |
     sharedOrderBy:['properties', sortBy.name]:descending;trackBy: trackByIndex">
-  <div class="station">
-    <shared-station [station]="station"
-      class="horizontal-scrolling"></shared-station>
+  <div class="station horizontal-scrolling">
+    <shared-station [station]="station"></shared-station>
   </div>
   <mat-divider></mat-divider>
 </ng-container>
